เพิ่มเส้นสำหรับ Update หรือ แก้ไข
