# internal/routes/routes.go
@@ -35,5 +35,6 @@ func SetupRoutes(app *fiber.App) {
 	transaction.Use(middleware.AuthMiddleware()) // ⚠️ ต้องมีบรรทัดนี้
 	transaction.Get("/", controllers.GetTransactionAll)
 	transaction.Post("/", controllers.CreateTransaction)
+	transaction.Put("/:id", controllers.UpdateTransaction)
 
 }
